se agrega desafio 1

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
                 <td> 
                     <p>Desafío 1</p>
                     <img src="assets\img\desafio1.jpg" class="img-desafios" alt="">
+                    <a href="desafio1.html">ingresar</a>
                 </td>
                 <td>
                     <p>Desafío 2</p>
                     <img src="assets\img\desafio2.jpg" class="img-desafios" alt="">
+                    <a href="desafio2.html">ingresar</a>
                 </td>
                 <td><p>Desafío 3</p>
                     <img src="assets\img\desafio3.jpg" class="img-desafios" alt="">
+                    <a href="desafio3.html">ingresar</a>
                 </td>
             </tr>
         </table>
