se suben cambios en desafio 1 y js de desafio 2 con correcion en html

--- a/desafio1.html
+++ b/desafio1.html
@@ -7,7 +7,7 @@
     <title>Desafío 1: Imagen Con borde</title>
 </head>
 <body>
-    <img id="imgdesafio1" src="assets/img/imgdesafio1.jpg" alt="Imagen" onclick="toggleBorder()">
-    <script src="assets/js/index.js"></script>
+    <img id="imgdesafio1" src="assets/img/imgdesafio1.jpg" alt="Imagen de paisaje" onclick="toggleBorder()">
+    <script src="assets/js/desafio1.js"></script>
 </body>
 </html>
