--- a/desafio2.html
+++ b/desafio2.html
@@ -13,19 +13,21 @@
         
         <section id="select-sticker">
             <div>
-                <img src="assets/img/img1sticker.jpg" id="imgsticker" alt="">
+                <img src="assets/img/img1sticker.jpg" id="imgsticker" alt="imagen de paquete de sticker">
                 <input type="number" id="inputsticker1" min="0" max="10" value="0">
             </div>
             <div>
-                <img src="assets/img/img2sticker.jpg" id="imgsticker" alt="">
+                <img src="assets/img/img2sticker.jpg" id="imgsticker" alt="imagen de paquete de sticker">
                 <input type="number" id="inputsticker2" min="0" max="10" value="0">
             </div>
             <div>
-                <img src="assets/img/img3sticker.jpg" id="imgsticker" alt="">
+                <img src="assets/img/img3sticker.jpg" id="imgsticker" alt=" imagen de paquete de sticker">
                 <input type="number" id="inputsticker3" min="0" max="10" value="0">
             </div>
+        </section>
+        <section id="resultadosticker">
             <p id="contadorsticker"></p>
         </section>
-    
+        <script src="assets/js/desafio2.js"></script>
 </body>
 </html>
